add feature to send request to artist for an event

--- a/html/artist-portfolio.html
+++ b/html/artist-portfolio.html
@@ -59,7 +59,7 @@
             <label class="label" for="offer">Offer</label>
             <input type="text" id="offer" class="inputField" required>
 
-            <input id="saveBtn" type="submit" value="Make An Offer">
+            <input id="makeOfferBtn" type="submit" value="Make An Offer">
             <input id="chatBtn" type="submit" value="Chat With Artist">
 
         </div>
