address field added in the organiser account section

--- a/html/account-organiser.html
+++ b/html/account-organiser.html
@@ -56,6 +56,9 @@
                 <label class="label" for="role">Role:</label>
                 <input type="text" id="role" class="inputField">
 
+                <label class="label" for="address">Address:</label>
+                <input type="text" id="address" class="inputField">
+
                 <label class="label" for="summary">Introduce yourself (max 120 words):</label>
                 <textarea type="text" id="summary" class="inputField" minlength="10" required> </textarea>
             </div>
