--- a/html/demo_chat.html
+++ b/html/demo_chat.html
@@ -29,17 +29,17 @@
         <div class="chat-content-wrapper">
             <div class="chatSideBar">
                 <div id="chat-list">
-                    <!--  -->
+
                 </div>
             </div>
-            <div class="chat-view">
-                <div id="chat-screen">
-                    <!--  -->
+            <div id="chat-view" class="chat-view">
+                <!-- <div id="chat-screen">
+
                 </div>
                 <div class="message-input-wrapper">
                     <input type="text" id="message-input" placeholder="Type a message...">
                     <button id="send-button">Send</button>
-                </div>
+                </div> -->
             </div>
 
         </div>
