--- a/html/account-artist.html
+++ b/html/account-artist.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Info</title>
-    <link rel="stylesheet" href="../css/artist-portfolio.css">
-    <link rel="stylesheet" href="../css/headerstyle.css">
+    <link rel="stylesheet" href="../css/account-artist.css">
+    <!-- <link rel="stylesheet" href="../css/headerstyle.css"> -->
+    <!-- <link rel="stylesheet" href="../css/main-footer.css"> -->
 
     <script type="module" src="../javascript/utilities.js" defer></script>
     <script type="module" src="../javascript/account-artist.js" defer></script>
@@ -14,59 +15,220 @@
 
 <body>
     <header>
-        <h1>Artist Alley</h1>
-        <nav>
-            <ul>
-                <li><a href="../html/homepage.html">Home</a></li>
-                <li><a href="../html/demo_book.html">Booking</a></li>
-                <li><a href="../html/demo_chat.html">chat</a></li>
-                <li><a href="" id="myProfile">profile</a></li>
-                <li><a href="" id="logoutBtn">logout</a></li>
 
-            </ul>
-        </nav>
+        <div class="headerContent">
+            <div class="site-heading">
+                <img src="../src/Untitled-9.png" alt="logo">
+                <h1>artist alley</h1>
+            </div>
+
+            <div class="navbar">
+                <nav>
+                    <ul>
+                        <li><a href="./homepage.html">Home</a></li>
+                        <li><a href="">About us</a></li>
+                        <li><a href="">Book an artist</a></li>
+                        <li><a href="">Join our artist</a></li>
+                        <li><a href="" id="myProfile">profile</a></li>
+                        <li><a href="" id="logoutBtn">logout</a></li>
+                    </ul>
+                </nav>
+                <div class="search"><a href="">Search <i class="fa-solid fa-magnifying-glass"></i></a></div>
+                <div class="menuBtn">
+                    <a href="#"><i class="fa-solid fa-bars"></i></a>
+                </div>
+            </div>
+
+            <h2>My Account</h2>
+
+        </div>
+
     </header>
     <main>
-        <h1> Let's get to know you better!</h1>
-        <div class="user-avatar">
-            <img id="profile-pic"
-                src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="user photo">
-            <input type="file" id="imageInput" accept="image/*">
-            <input type="button" id="uploadImageBtn" value="Upload">
-        </div>
-        <div class="user-info">
-            <label class="label" for="stage-name">Stage Name: </label>
-            <input type="text" id="stage-name" class="inputField">
 
-            <label class="label" for="genre">Genre: </label>
-            <select name="genre" id="genre" class="inputField">
-                <option value="" selected disabled> Choose an option</option>
-                <option value="pop">Pop</option>
-                <option value="rock">Rock</option>
-                <option value="r&b">Rythm & Blues</option>
-                <option value="indie">Indie</option>
-                <option value="country">Country music</option>
-            </select>
 
-            <label class="label" for="phone">Phone Number: </label>
-            <input type="number" id="phone" class="inputField">
+        <div class="mainContent">
 
-            <label class="label" for="website">Website/Portfolio:</label>
-            <input type="text" id="website" class="inputField">
+            <div class="artist-descp">
 
-            <label class="label" for="summary">Introduce yourself (max 120 words):</label>
-            <textarea type="text" id="summary" class="inputField" minlength="10" required> </textarea>
+                <div class="about-artist">
 
-            <input type="file" id="portfolioImageInput" accept="image/*" multiple>
-            <div id="portfolio-images">
+                    <div class="icons-grp">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                            class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                            class="fa-regular fa-star"></i>
+                    </div>
+
+                    <div class="artist-briefing">
+                        <img id="profile-pic" src="" alt="">
+                        <p id="summary"></p>
+                    </div>
+
+                    <ul>
+                        <li>Priving starts at: <span>$ 125</span></li>
+                        <li>Pick me for: <span id="genre"></span></li>
+                        <li>Location: <span>Vancouvver, BC</span></li>
+                    </ul>
+
+                </div>
+                <div class="artist-perf">
+                    <h3>About my performance:</h3>
+                    <p>I have more 15 years of experience being part of some well reconized bands and making
+                        presentatiosn
+                        around the country. I'm a dinamyc and versatile guitarist known for my electrifying performances
+                        and
+                        soulful sound. I have my own equipment and transportation.</p>
+
+                    <a href="./parul-calendar.html" class="check">Check calendar</a>
+                    <a href="./parul-booking.html" class="book-artist">Book</a>
+                </div>
             </div>
-            <input type="button" id="uploadPortfolioImageBtn" value="Upload All">
+            <div class="artist-work">
+                <div class="images">
+                    <img src="../src/jorge-gordo-W2UH8LdD3Tc-unsplash.jpg" alt="">
+                    <img src="../src/lachy-spratt-iJ9B3wegKsU-unsplash.jpg" alt="">
+                    <img src="../src/markus-spiske-w092hO6E96M-unsplash.jpg" alt="">
+                    <img src="../src/gary-ellis-XtZvUJ0YYHg-unsplash.jpg" alt="">
 
-            <input id="saveBtn" type="submit" value="Save">
+                </div>
+                <!-- <div class="view-album">
+                            <a href=#>View Album</a>
+                        </div> -->
+            </div>
+
+            <div class="chatBtn">
+                <a href="./book-chat.html">Chat</a>
+            </div>
         </div>
-    </main>
 
+        <div class="artist-reviews">
+            <h2>Reviews</h2>
+
+            <div class="review-list">
+                <img src="../src/person-1.jpg" alt="">
+                <h3>"Amazing"</h3>
+                <p class="name">Amanda Banes</p>
+                <p>Loved the energy and songs. My guests loved it, the music is also incredible. Nice experience.
+                </p>
+                <!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""> -->
+            </div>
+
+            <div class="review-list">
+                <img src="../src/person-2.jpg" alt="">
+                <h3>"Outstanding"</h3>
+                <p class="name">Ilyas Wes</p>
+                <p>He was punctual and presented an amazing performance during my birthday party.</p>
+                <!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""> -->
+            </div>
+
+            <div class="review-list">
+                <img src="../src/person-3.jpg" alt="">
+                <h3>"Energetic"</h3>
+                <p class="name">Richard calendar</p>
+                <p>Great show and very energetic and different from the others. Nice songs.</p>
+                <!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""> -->
+            </div>
+
+            <div class="review-list">
+                <img src="../src/person-4.jpg" alt="">
+                <h3>"Powerful"</h3>
+                <p class="name">Viola Smith</p>
+                <p>Very interesting, I celebrated my wedding with them and everybody like it, I recommend.</p>
+                <!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""> -->
+            </div>
+
+        </div>
+        </div>
+
+        <div class="top-btn">
+            <a href="#top">
+                <img src="../src/Up icon.png" alt="top-btn">
+            </a>
+        </div>
+        <!--  -->
+        <footer>
+            <div class="footerContent">
+
+                <div class="footer-head">
+                    <img src="../src/logo2.png" alt="">
+                    <p>Your source for artistic excellence, delivering creativity and talent for every occasion.</p>
+                    <div class="icons">
+                        <ul>
+                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="quick-links">
+                    <p>Quick links</p>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Book an artist</a></li>
+                        <li><a href="#">Join our artist</a></li>
+                    </ul>
+                </div>
+
+                <div class="contact-us">
+                    <p>Contact us</p>
+                    <ul>
+                        <li><a href="#">1-800-123-4567</a></li>
+                        <li><a href="#">info@artistalley.com</a></li>
+                        <li><a href="#">4878, Main street, Vancouver, BC, V52TP</a></li>
+                    </ul>
+                </div>
+
+                <div class="copyright">
+                    <p>&copy; 2024 Artist Alley. All rights reserved. | privacy Policy | Terms of Service</p>
+                </div>
+
+            </div>
+
+        </footer>
+    </main>
 </body>
 
 </html>
+
+
+<!-- <h1> Let's get to know you better!</h1>
+<div class="user-avatar">
+    <img id="profile-pic"
+        src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="user photo">
+    <input type="file" id="imageInput" accept="image/*">
+    <input type="button" id="uploadImageBtn" value="Upload">
+</div>
+<div class="user-info">
+    <label class="label" for="stage-name">Stage Name: </label>
+    <input type="text" id="stage-name" class="inputField">
+
+    <label class="label" for="genre">Genre: </label>
+    <select name="genre" id="genre" class="inputField">
+        <option value="" selected disabled> Choose an option</option>
+        <option value="pop">Pop</option>
+        <option value="rock">Rock</option>
+        <option value="r&b">Rythm & Blues</option>
+        <option value="indie">Indie</option>
+        <option value="country">Country music</option>
+    </select>
+
+    <label class="label" for="phone">Phone Number: </label>
+    <input type="number" id="phone" class="inputField">
+
+    <label class="label" for="website">Website/Portfolio:</label>
+    <input type="text" id="website" class="inputField">
+
+    <label class="label" for="summary">Introduce yourself (max 120 words):</label>
+    <textarea type="text" id="summary" class="inputField" minlength="10" required> </textarea>
+
+    <input type="file" id="portfolioImageInput" accept="image/*" multiple>
+    <div id="portfolio-images">
+    </div>
+    <input type="button" id="uploadPortfolioImageBtn" value="Upload All">
+
+    <input id="saveBtn" type="submit" value="Save">
+</div> -->
