--- a/html/artist-portfolio.html
+++ b/html/artist-portfolio.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <h1>Artist Alley</h1>
         <nav>
             <ul>
@@ -25,8 +25,39 @@
 
             </ul>
         </nav>
+    </header> -->
+    <header>
+
+        <div class="headerContent">
+            <div class="site-heading">
+                <img src="../src/Untitled-9.png" alt="logo">
+                <h1>artist alley</h1>
+            </div>
+
+            <div class="navbar">
+                <nav>
+                    <ul>
+                        <li><a href="./homepage.html">Home</a></li>
+                        <li><a href="">About us</a></li>
+                        <li><a href="">Book an artist</a></li>
+                        <li><a href="">Join our artist</a></li>
+                        <li><a href="" id="myProfile">profile</a></li>
+                        <li><a href="" id="logoutBtn">logout</a></li>
+                    </ul>
+                </nav>
+                <div class="search"><a href="">Search <i class="fa-solid fa-magnifying-glass"></i></a></div>
+                <div class="menuBtn">
+                    <a href="#"><i class="fa-solid fa-bars"></i></a>
+                </div>
+            </div>
+
+            <h2>Great <br>Just few more steps to confirm your booking:</h2>
+
+        </div>
+
     </header>
-    <main>
+
+    <!-- <main>
         <div class="user-avatar">
             <img id="profile-pic"
                 src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -64,7 +95,7 @@
 
         </div>
         </div>
-    </main>
+    </main> -->
 
 </body>
 
