--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <body>
         <main>
-            <h1>Artist Alley - Find, Book & Celibrate</h1>
+            <h1>Artist Alley - Find, Book & Celebrate</h1>
             <input id="loginBtn" type="button" value="Login">
-            <input id="signupBtn" type="button" value="Signup">
+            <input id="signupBtn" type="button" value="Sign Up">
         </main>
     </body>
 
