--- a/html/bookings.html
+++ b/html/bookings.html
@@ -8,24 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Booking</title>
 
-    <link rel="stylesheet" href="../css/demo_book.css">
+    <link rel="stylesheet" href="../css/bookings.css">
     <link rel="stylesheet" href="../css/headerstyle.css">
+    <link rel="stylesheet" href="../css/main-footer.css">
+
     <script type="module" src="../javascript/utilities.js" defer></script>
     <script type="module" src="../javascript/booking.js" defer></script>
 </head>
 
 <body>
     <header>
-        <h1>Artist Alley</h1>
-        <nav>
-            <ul>
-                <li><a href="../html/homepage.html">Home</a></li>
-                <li><a href="../html/demo_book.html">Booking</a></li>
-                <li><a href="../html/demo_chat.html">chat</a></li>
-                <li><a href="" id="myProfile">profile</a></li>
-                <li><a href="" id="logoutBtn">logout</a></li>
-            </ul>
-        </nav>
+        
     </header>
     <main>
         <div class="container">
@@ -46,6 +39,10 @@
             </div>
         </div>
     </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
