--- a/html/account-artist.html
+++ b/html/account-artist.html
@@ -16,7 +16,7 @@
 <body>
     <header>
 
-        <div class="headerContent">
+        <!-- <div class="headerContent">
             <div class="site-heading">
                 <img src="../src/Untitled-9.png" alt="logo">
                 <h1>artist alley</h1>
@@ -41,7 +41,7 @@
 
             <h2>My Account</h2>
 
-        </div>
+        </div> -->
 
     </header>
     <main>
@@ -147,46 +147,7 @@
         </div>
         <!--  -->
         <footer>
-            <div class="footerContent">
-
-                <div class="footer-head">
-                    <img src="../src/logo2.png" alt="">
-                    <p>Your source for artistic excellence, delivering creativity and talent for every occasion.</p>
-                    <div class="icons">
-                        <ul>
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="quick-links">
-                    <p>Quick links</p>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Book an artist</a></li>
-                        <li><a href="#">Join our artist</a></li>
-                    </ul>
-                </div>
-
-                <div class="contact-us">
-                    <p>Contact us</p>
-                    <ul>
-                        <li><a href="#">1-800-123-4567</a></li>
-                        <li><a href="#">info@artistalley.com</a></li>
-                        <li><a href="#">4878, Main street, Vancouver, BC, V52TP</a></li>
-                    </ul>
-                </div>
-
-                <div class="copyright">
-                    <p>&copy; 2024 Artist Alley. All rights reserved. | privacy Policy | Terms of Service</p>
-                </div>
-
-            </div>
-
+            
         </footer>
     </main>
 </body>
