--- a/html/homepage.html
+++ b/html/homepage.html
@@ -7,6 +7,7 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="../css/homepage.css">
     <link rel="stylesheet" href="../css/headerstyle.css">
+    <link rel="stylesheet" href="../css/main-footer.css">
     <link rel="stylesheet" href="../css/my-search.css">
 
     <script type="module" src="../javascript/utilities.js" defer></script>
@@ -17,17 +18,7 @@
 
 <body>
     <header>
-        <h1>Artist Alley</h1>
-        <nav>
-            <ul>
-                <li><a href="../html/homepage.html">Home</a></li>
-                <li><a href="../html/demo_book.html">Booking</a></li>
-                <li><a href="../html/demo_chat.html">chat</a></li>
-                <li><a href="" id="myProfile">profile</a></li>
-                <li><a href="" id="logoutBtn">logout</a></li>
-
-            </ul>
-        </nav>
+        
     </header>
     <main>
         <!-- Search Bar -->
@@ -39,18 +30,11 @@
         <!-- Search Results Results -->
         <div id="searchResults"></div>
 
-        <!-- <div class="searchList"></div>
-        <h1>Welcome to Artist Alley!</h1><br>
-        <div id="user"></div>
-
-        <div class="portfolio">
-            <button id="portfolioBtn">My Portfolio</button>
-        </div>
-
-        <div class="logout">
-            <button id="logoutBtn">Logout</button>
-        </div> -->
     </main>
+
+    <footer>
+
+    </footer>
 
 </body>
 
