--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artist Alley</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./javascript/index.js" defer></script>
+    <link rel="stylesheet" href="../css/headerstyle.css">
+
+    <script type="module" src="./javascript/index.js" defer></script>
 </head>
 
 <body>
