fix for the header and footer styles --copied from Parul branch

--- a/html/header.html
+++ b/html/header.html
@@ -1,11 +1,30 @@
-<h1>Artist Alley</h1>
-<nav>
-    <ul>
-        <li><a href="../html/homepage.html">Home</a></li>
-        <li><a href="../html/bookings.html">Booking</a></li>
-        <li><a href="../html/chat.html">chat</a></li>
-        <li><a href="" id="myProfile">profile</a></li>
-        <li><a href="" id="logoutBtn">logout</a></li>
+<div class="headerContent">
+    <div class="site-heading">
+        <img src="../src/Untitled-9.png" alt="logo">
+        <h1>artist alley</h1>
+    </div>
 
-    </ul>
-</nav>
+    <div class="navbar">
+        <nav>
+            <ul>
+                <li><a href="../html/homepage.html">Home</a></li>
+                <li><a href="../html/bookings.html">Booking</a></li>
+                <li><a href="../html/chat.html">chat</a></li>
+                <li><a href="" id="myProfile">profile</a></li>
+                <li><a href="" id="logoutBtn">logout</a></li>
+
+                <!-- <li><a href="About Us">About us</a></li>
+                <li><a href="">Book an artist</a></li>
+                <li><a href="">Join our artist</a></li>
+                <li class="login-btn"><a href="">Login</a></li> -->
+            </ul>
+        </nav>
+        <div class="search"><a href="">Search <i class="fa-solid fa-magnifying-glass"></i></a></div>
+        <div class="menuBtn">
+            <a href="#"><i class="fa-solid fa-bars"></i></a>
+        </div>
+    </div>
+
+    <!-- <h2>Great <br>Just few more steps to confirm your booking:</h2> -->
+
+</div>
