integrate edit organiser info

--- a/html/account-organiser.html
+++ b/html/account-organiser.html
@@ -18,38 +18,10 @@
 
     <header>
 
-        <!-- <div class="headerContent">
-            <div class="site-heading">
-                <img src="../src/Untitled-9.png" alt="logo">
-                <h1>artist alley</h1>
-            </div>
-
-            <div class="navbar">
-                <nav>
-                    <ul>
-                        <li><a href="./homepage.html">Home</a></li>
-                        <li><a href="">About us</a></li>
-                        <li><a href="">Book an artist</a></li>
-                        <li><a href="">Join our artist</a></li>
-                        <li><a href="" id="myProfile">profile</a></li>
-                        <li><a href="" id="logoutBtn">logout</a></li>
-                    </ul>
-                </nav>
-                <div class="search"><a href="">Search <i class="fa-solid fa-magnifying-glass"></i></a></div>
-                <div class="menuBtn">
-                    <a href="#"><i class="fa-solid fa-bars"></i></a>
-                </div>
-            </div>
-
-            <h2>My Dashboard</h2>
-
-        </div> -->
-
     </header>
 
     <!--  -->
     <main>
-        <!-- =========================== -->
         <div class="user-data">
             <section class="profile">
                 <div class="profile-div">
@@ -61,6 +33,10 @@
                         <div>
                             <span>Address:</span>
                             <p id="address"></p>
+                        </div>
+                        <div>
+                            <span>Phone:</span>
+                            <p id="phone"></p>
                         </div>
                         <button id="editProfile" onclick="console.log(`clicking`);">Edit Profile</button>
                     </div>
@@ -198,7 +174,7 @@
 
     <!--  -->
     <footer>
-        
+
     </footer>
 </body>
 
