--- a/html/artist-portfolio.html
+++ b/html/artist-portfolio.html
@@ -17,51 +17,93 @@
     <header>
 
     </header>
-
     <main>
-        <div class="user-avatar">
-            <img id="profile-pic"
-                src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="user photo">
+        <div class="mainContent">
+
+            <div class="artist-descp">
+
+                <div class="about-artist">
+
+                    <div class="icons-grp">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                            class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                            class="fa-regular fa-star"></i>
+                    </div>
+
+                    <div class="artist-briefing">
+                        <img id="profile-pic" src="" alt="">
+                        <p id="summary"></p>
+                    </div>
+
+                    <ul>
+                        <li>Pricing starts at: <span id="pricing">$ 125</span></li>
+                        <li>Pick me for: <span id="category">Guitarist</span></li>
+                        <li>Location: <span id="address">Vancouvver, BC</span></li>
+                    </ul>
+
+                </div>
+                <div id="ctaDiv" class="artist-perf">
+                    <a href="" class="edit" id="bookBtn">Send Booking Requeset</a>
+                    <a href="" class="edit" id="chatBtn">Chat With Artist</a>
+
+                </div>
+            </div>
+            <div class="artist-work">
+                <div class="images">
+            
+                </div>
+            </div>
         </div>
-        <div class="user-info">
-            <label class="label" for="name">Name: </label>
-            <span id="name" class="inputField"></span>
-            <label class="label" for="stage-name">Stage Name: </label>
-            <span id="stage-name" class="inputField"></span>
 
-            <label class="label" for="genre">Genre: </label>
-            <span id="genre" class="inputField"></span>
+        <div class="artist-reviews">
+            <h2>Reviews</h2>
 
-            <label class="label" for="phone">Phone Number: </label>
-            <span id="phone" class="inputField"></span>
+            <div class="review-list">
+                <img src="../src/person-1.jpg" alt="">
+                <h3>"Amazing"</h3>
+                <p class="name">Amanda Banes</p>
+                <p>Loved the energy and songs. My guests loved it, the music is also incredible. Nice experience.
+                </p>
+                <!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""> -->
+            </div>
 
-            <label class="label" for="website">Website/Portfolio:</label>
-            <span id="website" class="inputField"></span>
+            <div class="review-list">
+                <img src="../src/person-2.jpg" alt="">
+                <h3>"Outstanding"</h3>
+                <p class="name">Ilyas Wes</p>
+                <p>He was punctual and presented an amazing performance during my birthday party.</p>
+                <!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""> -->
+            </div>
 
-            <label class="label" for="summary">Introduce yourself (max 120 words):</label>
-            <span id="summary" class="inputField"></span>
+            <div class="review-list">
+                <img src="../src/person-3.jpg" alt="">
+                <h3>"Energetic"</h3>
+                <p class="name">Richard calendar</p>
+                <p>Great show and very energetic and different from the others. Nice songs.</p>
+                <!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""> -->
+            </div>
+
+            <div class="review-list">
+                <img src="../src/person-4.jpg" alt="">
+                <h3>"Powerful"</h3>
+                <p class="name">Viola Smith</p>
+                <p>Very interesting, I celebrated my wedding with them and everybody like it, I recommend.</p>
+                <!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""> -->
+            </div>
+
+        </div>
         </div>
 
-        <div class="booking-request">
-            <label class="label" for="address">Event Address:</label>
-            <input type="text" id="address" class="inputField" required>
-            <label class="label" for="date">Event Date: </label>
-            <input type="text" id="date" class="inputField" required>
-            <label class="label" for="offer">Offer</label>
-            <input type="text" id="offer" class="inputField" required>
-
-            <input id="makeOfferBtn" type="submit" value="Make An Offer">
-            <input id="chatBtn" type="submit" value="Chat With Artist">
-
+        <div class="top-btn">
+            <a href="#top">
+                <img src="../src/Up icon.png" alt="top-btn">
+            </a>
         </div>
-        </div>
+        <!--  -->
+        <footer>
+
+        </footer>
     </main>
-    
-    <footer>
-
-    </footer>
-
 </body>
 
 </html>
