minor UI changes in the search-result page

--- a/html/artist-portfolio.html
+++ b/html/artist-portfolio.html
@@ -18,6 +18,25 @@
 
     </header>
     <main>
+        <div id="popup-container" class="popup">
+
+
+            <div class="popup-content">
+                <span class="close" id="close-popup">&times;</span>
+                <h2> Just few more steps: </h2>
+                <div class="event-data">
+                    <label class="label" for="address">Event Address:</label>
+                    <input type="text" id="address" class="inputField" required>
+                    <label class="label" for="date">Event Date: </label>
+                    <input type="text" id="date" class="inputField" required>
+                    <label class="label" for="offer">Offer</label>
+                    <input type="text" id="offer" class="inputField" required>
+
+                    <input id="makeOfferBtn" type="submit" value="Make An Offer">
+                </div>
+
+            </div>
+        </div>
         <div class="mainContent">
 
             <div class="artist-descp">
@@ -50,7 +69,7 @@
             </div>
             <div class="artist-work">
                 <div class="images">
-            
+
                 </div>
             </div>
         </div>
