--- a/html/search-result.html
+++ b/html/search-result.html
@@ -12,6 +12,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="../css/search-result.css">
+    <link rel="stylesheet" href="../css/headerstyle.css">
+    <link rel="stylesheet" href="../css/main-footer.css">
 
     <link rel="stylesheet" href="../css/variables.css">
     <script type="module" src="../javascript/search-result.js" defer ></script>
@@ -26,6 +28,11 @@
     <main>
         <div id="container" class="mainContent">
 
+        </div>
+        <div class="top-btn">
+            <a href="#top">
+                <img src="../src/Up icon.png" alt="top-btn">
+            </a>
         </div>
     </main>
 
