UI changes in the homepage

--- a/html/header.html
+++ b/html/header.html
@@ -8,10 +8,10 @@
         <nav>
             <ul>
                 <li><a href="../html/homepage.html">Home</a></li>
-                <li><a href="../html/bookings.html">Booking</a></li>
-                <li><a href="../html/chat.html">chat</a></li>
-                <li><a href="" id="myProfile">profile</a></li>
-                <li><a href="" id="logoutBtn">logout</a></li>
+                <li><a href="../html/bookings.html">My Bookings</a></li>
+                <li><a href="../html/chat.html">Chat</a></li>
+                <li><a href="" id="myProfile">My Profile</a></li>
+                <li><a href="" id="logoutBtn">Logout</a></li>
 
                 <!-- <li><a href="About Us">About us</a></li>
                 <li><a href="">Book an artist</a></li>
@@ -19,7 +19,7 @@
                 <li class="login-btn"><a href="">Login</a></li> -->
             </ul>
         </nav>
-        <div class="search"><a href="">Search <i class="fa-solid fa-magnifying-glass"></i></a></div>
+        <!-- <div class="search"><a href="">Search <i class="fa-solid fa-magnifying-glass"></i></a></div> -->
         <div class="menuBtn">
             <a href="#"><i class="fa-solid fa-bars"></i></a>
         </div>
