--- a/html/homepage.html
+++ b/html/homepage.html
@@ -30,6 +30,21 @@
         <!-- Search Results Results -->
         <div id="searchResults"></div>
 
+        <div class="search-suggestions">
+            <ul>
+                <li id="rock" class="suggestion">Rock</li>
+                <li id="r&b" class="suggestion">Rythm & Blues</li>
+                <li id="indie" class="suggestion">Indie</li>
+                <li id="guitar" class="suggestion">Guitar</li>
+                <li id="comedy" class="suggestion">Comedy Shows</li>
+                <li id="pop" class="suggestion">Pop</li>
+                <li id="dj" class="suggestion">DJ</li>
+                <li id="dance" class="suggestion">Dance</li>
+                <li id="country" class="suggestion">Country music</li>
+                <li id="sing" class="suggestion">Singing</li>
+            </ul>
+        </div>
+
     </main>
 
     <footer>
