UI changes for login screen

--- a/html/edit-account-artist.html
+++ b/html/edit-account-artist.html
@@ -7,6 +7,7 @@
     <title>Info</title>
     <link rel="stylesheet" href="../css/edit-account-artist.css">
     <link rel="stylesheet" href="../css/headerstyle.css">
+    <link rel="stylesheet" href="../css/main-footer.css">
 
     <script type="module" src="../javascript/utilities.js" defer></script>
     <script type="module" src="../javascript/edit-account-artist.js" defer></script>
@@ -74,6 +75,10 @@
             <input id="saveBtn" type="submit" value="Save">
         </div>
     </main>
+
+    <footer>
+
+    </footer>
 
 </body>
 
