--- a/html/login.html
+++ b/html/login.html
@@ -11,15 +11,25 @@
 
 <body>
     <main>
-        <h1>Login to Artist Alley</h1>
-        <div class="login-form">
-            <label class="label" for="email">Email</label>
-            <input type="email" id="email" class="inputField" required>
+        <div class="login-wrapper">
+            <div class="logo">
+                <img src="../src/logo2.png" alt="">
+                <h2> Find, Book & Celebrate</h2>
+            </div>
+            <div class="login-form">
+                <label class="label" for="email">Email</label>
+                <input type="email" id="email" class="inputField" required>
 
-            <label class="label" for="password"> Password</label>
-            <input type="password" id="password" class="inputField" required>
-            
-            <input id="loginBtn" type="button" value="LogIn">
+                <label class="label" for="password"> Password</label>
+                <input type="password" id="password" class="inputField" required>
+
+                <div class="buttons">
+                    <input id="loginBtn" type="button" value="LogIn">
+                    <span id="or">OR</span>
+                    <input id="signupBtn" type="button" value="Sign Up">
+                </div>
+
+            </div>
         </div>
     </main>
 </body>
