UI changes for signup screen

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -18,33 +18,30 @@
 
 <body>
     <header>
-        
+
     </header>
     <main>
-        <!-- Search Bar -->
-        <div class="search-container">
-            <input type="text" id="searchInput" placeholder="Search...">
-            <button type="button" id="searchButton">Search</button>
+        <div class="main-wrapper">
+            <!-- Search Bar -->
+            <div class="search-container">
+                <input type="text" id="searchInput" placeholder="Search...">
+                <button type="button" id="searchButton">Search</button>
+            </div>
+            <div class="search-suggestions">
+                <ul>
+                    <li id="rock" class="suggestion">Rock</li>
+                    <li id="r&b" class="suggestion">Rythm & Blues</li>
+                    <li id="indie" class="suggestion">Indie</li>
+                    <li id="guitar" class="suggestion">Guitar</li>
+                    <li id="comedy" class="suggestion">Comedy Shows</li>
+                    <li id="pop" class="suggestion">Pop</li>
+                    <li id="dj" class="suggestion">DJ</li>
+                    <li id="dance" class="suggestion">Dance</li>
+                    <li id="country" class="suggestion">Country music</li>
+                    <li id="sing" class="suggestion">Singing</li>
+                </ul>
+            </div>
         </div>
-
-        <!-- Search Results Results -->
-        <div id="searchResults"></div>
-
-        <div class="search-suggestions">
-            <ul>
-                <li id="rock" class="suggestion">Rock</li>
-                <li id="r&b" class="suggestion">Rythm & Blues</li>
-                <li id="indie" class="suggestion">Indie</li>
-                <li id="guitar" class="suggestion">Guitar</li>
-                <li id="comedy" class="suggestion">Comedy Shows</li>
-                <li id="pop" class="suggestion">Pop</li>
-                <li id="dj" class="suggestion">DJ</li>
-                <li id="dance" class="suggestion">Dance</li>
-                <li id="country" class="suggestion">Country music</li>
-                <li id="sing" class="suggestion">Singing</li>
-            </ul>
-        </div>
-
     </main>
 
     <footer>
