UI changes to the bookings page

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -23,6 +23,7 @@
     <main>
         <div class="main-wrapper">
             <!-- Search Bar -->
+            <h1>Find, Book & Celebrate</h1>
             <div class="search-container">
                 <input type="text" id="searchInput" placeholder="Search...">
                 <button type="button" id="searchButton">Search</button>
