--- a/html/edit-account-artist.html
+++ b/html/edit-account-artist.html
@@ -31,7 +31,7 @@
         <h1> Let's get to know you better!</h1>
         <div class="user-avatar">
             <img id="profile-pic"
-                src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                src=""
                 alt="user photo">
             <input type="file" id="imageInput" accept="image/*">
             <input type="button" id="uploadImageBtn" value="Upload">
