--- a/html/edit-account-organiser.html
+++ b/html/edit-account-organiser.html
@@ -24,7 +24,7 @@
 
             <div class="user-avatar">
                 <img
-                src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                src=""
                 id="profile-image" alt="user avatar">
             </div>
             <input id="start-camera" type="button" value="Start Camera">
