--- a/html/login.html
+++ b/html/login.html
@@ -14,7 +14,7 @@
         <div class="login-wrapper">
             <div class="logo">
                 <img src="../src/logo2.png" alt="">
-                <h1> Find, Book & Celebrate</h1>
+                <h1> Login to your account</h1>
             </div>
             <div class="login-form">
                 <label class="label" for="email">Email</label>
