--- a/html/artist-portfolio.html
+++ b/html/artist-portfolio.html
@@ -32,7 +32,7 @@
                     <label class="label" for="offer">Offer</label>
                     <input type="text" id="offer" class="inputField" required>
 
-                    <input id="makeOfferBtn" type="submit" value="Make An Offer">
+                    <input id="makeOfferBtn" type="submit" value="Send">
                 </div>
 
             </div>
