--- a/html/header.html
+++ b/html/header.html
@@ -3,6 +3,7 @@
         <img src="../src/Untitled-9.png" alt="logo">
         <h1>artist alley</h1>
     </div>
+    <h1 id="title"></h1>
 
     <div class="navbar">
         <nav>
