homepage dynamic header

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -7,26 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artist Alley</title>
     <link rel="stylesheet" href="../css/homepage.css">
+    <script type="module" src="../javascript/homepage.js" defer></script>
 </head>
 
 <body>
     <header>
 
-        <div class="logo">
+        <!-- <div class="logo">
             <img src="../src/Untitled-9.png" alt="Artist Alley Logo">
             <span>artist alley</span>
         </div>
 
         <nav>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Book an artist</a></li>
-                <li><a href="#">Join our artists</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="#">My dashboard</a></li>
+                <li><a href="../html/homepage.html">Home</a></li>
+                <li><a href="../html/bookings.html">My Bookings</a></li>
+                <li><a href="../html/chat.html">Chat</a></li>
+                <li><a href="" id="myProfile">My Profile</a></li>
+                <li><a href="" id="logoutBtn">Logout</a></li>
+
             </ul>
-        </nav>
+        </nav> -->
 
     </header>
 
@@ -216,8 +217,6 @@
         </div>
 
     </footer>
-
-    <script src=""></script>
 </body>
 
 </html>
