--- a/html/homepage.html
+++ b/html/homepage.html
@@ -13,21 +13,21 @@
 <body>
     <header>
 
-        <!-- <div class="logo">
+        <div class="logo">
             <img src="../src/Untitled-9.png" alt="Artist Alley Logo">
             <span>artist alley</span>
         </div>
 
         <nav>
             <ul>
-                <li><a href="../html/homepage.html">Home</a></li>
-                <li><a href="../html/bookings.html">My Bookings</a></li>
-                <li><a href="../html/chat.html">Chat</a></li>
-                <li><a href="" id="myProfile">My Profile</a></li>
-                <li><a href="" id="logoutBtn">Logout</a></li>
-
+                <li><a href="../html/homepage.html" class="active">Home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Book an artist</a></li>
+                <li><a href="#">Join our artists</a></li>
+                <li><a href="#">Search</a></li>
+                <li><a href="../html/login.html">Log In</a></li>
             </ul>
-        </nav> -->
+        </nav>
 
     </header>
 
@@ -217,6 +217,8 @@
         </div>
 
     </footer>
+
+    <script src=""></script>
 </body>
 
 </html>
