search field not working

--- a/html/header.html
+++ b/html/header.html
@@ -20,7 +20,7 @@
                 <li class="login-btn"><a href="">Login</a></li> -->
             </ul>
         </nav>
-        <!-- <div class="search"><a href="">Search <i class="fa-solid fa-magnifying-glass"></i></a></div> -->
+        <div class="search"><a href="">Search <i class="fa-solid fa-magnifying-glass"></i></a></div>
         <div class="menuBtn">
             <a href="#"><i class="fa-solid fa-bars"></i></a>
         </div>
