--- a/html/header-log-homepage.html
+++ b/html/header-log-homepage.html
@@ -69,7 +69,7 @@
                     <li><a href="../html/homepage.html">Home</a></li>
                     <li><a href="../html/bookings.html">My Bookings</a></li>
                     <li><a href="../html/chat.html">Chat</a></li>
-                    <li><a href="">Search <i class="fa-solid fa-magnifying-glass"></i></a></li>
+                    <li><a id="nav-search" href="">Search <i class="fa-solid fa-magnifying-glass"></i></a></li>
                     <li><a href="" id="myProfile">My Profile</a></li>
                     <li><a href="" id="logoutBtn">Logout</a></li>
 
