--- a/html/homepage.html
+++ b/html/homepage.html
@@ -27,7 +27,7 @@
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Book an artist</a></li>
                 <li><a href="#">Join our artists</a></li>
-                <li><a id="search-toggle">Search</a></li>
+                <!-- <li id="search-toggle"><a>Search</a></li> -->
                 <!-- <li><button>Search</button></li> -->
                 <li><a href="../html/login.html">Log In</a></li>
             </ul>
@@ -35,21 +35,21 @@
 
     </header>
 
-    <div class="search-container">
-        <form action="#">
-            <label for="search">Search</label>
-            <div class="search-bar">
-
-                <input type="search" name="search" id="search">
-                <button class="get-search" id="getSearch">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <!-- <span class="fa-solid fa-rectangle-xmark"></span> -->
-                </button>
-            </div>
-        </form>
-    </div>
-
     <main>
+        <div class="search-container">
+            <form action="#">
+                <label for="search">Search</label>
+                <div class="search-bar">
+    
+                    <input type="search" name="search" id="search">
+                    <button class="get-search" id="searchBtn">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <!-- <span class="fa-solid fa-rectangle-xmark"></span> -->
+                    </button>
+                </div>
+            </form>
+        </div>
+        
         <section style="background-color: #1a1a1a;">
             <div class="hero">
                 <div class="hero-text">
