minor UI fix for search bar

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -41,7 +41,7 @@
                 <label for="search">Search</label>
                 <div class="search-bar">
     
-                    <input type="search" name="search" id="search">
+                    <input type="search" name="search" id="search" placeholder="Search artists here">
                     <button class="get-search" id="searchBtn">
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <!-- <span class="fa-solid fa-rectangle-xmark"></span> -->
