--- a/html/signup.html
+++ b/html/signup.html
@@ -15,7 +15,7 @@
         <div id="signupForm">
             <div class="logo">
                 <img src="../src/logo2.png" alt="">
-                <h1> Just a few more steps!</h1>
+                <h1> Welcome! Create your own artist account.</h1>
             </div>
 
             <label class="label" for="fName">First Name</label>
