--- a/html/signup.html
+++ b/html/signup.html
@@ -46,26 +46,26 @@
         <div id="signupForm">
             <div class="logo">
                 <!-- <img src="../src/logo2.png" alt=""> -->
-                <h1> Welcome! Create your own artist account.</h1>
+                <h2> Welcome! Create your own artist account.</h2>
             </div>
 
             <div class="labels">
-                <label class="label" for="fName">First Name</label>
-                <input type="text" id="fName" class="inputField" required>
+                <!-- <label class="label" for="fName">First Name</label> -->
+                <input type="text" id="fName" class="inputField" placeholder="First name" required>
             </div>
 
             <div class="labels">
-                <label class="label" for="lName">Last Name</label>
-                <input type="text" id="lName" class="inputField" required>
+                <!-- <label class="label" for="lName">Last Name</label> -->
+                <input type="text" id="lName" class="inputField" placeholder="Last name" required>
             </div>
 
             <div class="labels">
-                <label class="label" for="email">Email</label>
-                <input type="email" id="email" class="inputField" required>
+                <!-- <label class="label" for="email">Email</label> -->
+                <input type="email" id="email" class="inputField" placeholder="Email" required>
             </div>
 
             <div class="labels">
-                <label class="label" for="userType">I would like to: </label>
+                <!-- <label class="label" for="userType">I would like to: </label> -->
                 <select name="userType" id="userType" class="inputField">
 
                     <option value="" selected disabled> Choose an option</option>
@@ -75,21 +75,21 @@
             </div>
 
             <div class="labels">
-                <label class="label" for="password"> Password</label>
-                <input type="password" id="password" class="inputField" required>
+                <!-- <label class="label" for="password"> Password</label> -->
+                <input type="password" id="password" class="inputField" placeholder="Password" required>
             </div>
 
             <div class="labels">
-                <label class="label" for="confirmPass">Confirm Password</label>
-                <input type="password" id="confirmPass" class="inputField" required>
+                <!-- <label class="label" for="confirmPass">Confirm Password</label> -->
+                <input type="password" id="confirmPass" class="inputField" placeholder="Confirm password" required>
             </div>
 
 
             <div class="submit">
-                <input id="submitBtn" type="submit" value="SignUp">
+                <input id="submitBtn" type="submit" value="Sign up">
             </div>
 
-            
+
 
             <div id="status">
 
