--- a/html/login.html
+++ b/html/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/variables.css">
     <script type="module" src="../javascript/login.js" defer></script>
 </head>
 
