--- a/html/account-organiser.html
+++ b/html/account-organiser.html
@@ -25,18 +25,23 @@
         <div class="user-data">
             <section class="profile">
                 <div class="profile-div">
+                    <h1 id="name"></h1>
                     <article>
                         <img id="profile-image" src="" alt="">
                         <p id="summary"></p>
                     </article>
                     <div class="addressSec">
                         <div>
-                            <span>Address:</span>
-                            <p id="address"></p>
+                            <span>Role:</span>
+                            <p id="role"></p>
                         </div>
                         <div>
                             <span>Phone:</span>
                             <p id="phone"></p>
+                        </div>
+                        <div>
+                            <span>Address:</span>
+                            <p id="address"></p>
                         </div>
                         <button id="editProfile" onclick="console.log(`clicking`);">Edit Profile</button>
                     </div>
