added first name and last name fields for artist edit profile

--- a/html/edit-account-artist.html
+++ b/html/edit-account-artist.html
@@ -37,6 +37,12 @@
             <input type="button" id="uploadImageBtn" value="Upload">
         </div>
         <div class="user-info">
+            <label class="label" for="first-name">First Name: </label>
+            <input type="text" id="first-name" class="inputField">
+
+            <label class="label" for="last-name">Last Name: </label>
+            <input type="text" id="last-name" class="inputField">
+
             <label class="label" for="stage-name">Stage Name: </label>
             <input type="text" id="stage-name" class="inputField">
 
