--- a/html/artist-portfolio.html
+++ b/html/artist-portfolio.html
@@ -30,7 +30,7 @@
                     <label class="label" for="address">Event Address:</label>
                     <input type="text" id="address" class="inputField" required>
                     <label class="label" for="date">Event Date: </label>
-                    <input type="text" id="date" class="inputField" required>
+                    <input type="date" id="date" class="inputField" required>
                     <label class="label" for="offer">Offer</label>
                     <input type="text" id="offer" class="inputField" required>
 
