added close button in the search page

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -38,9 +38,11 @@
     <main>
         <div class="search-container">
             <form action="#">
+                <a id="close-popup-success" class="close-icon"><i class="fa-solid fa-xmark"></i></a>
+
                 <label for="search">Search</label>
                 <div class="search-bar">
-    
+
                     <input type="search" name="search" id="search" placeholder="Search artists here">
                     <button class="get-search" id="searchBtn">
                         <i class="fa-solid fa-magnifying-glass"></i>
