homepage and search bar fixes

--- a/html/header-log-homepage.html
+++ b/html/header-log-homepage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="../css/homepage.css"> -->
-    <style>
+    <!-- <style>
         .myHeader {
             width: 100%;
         }
@@ -53,7 +53,7 @@
         nav ul li a:hover {
             background-color: #d1455d;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
