--- a/html/homepage.html
+++ b/html/homepage.html
@@ -38,7 +38,7 @@
     <main>
         <div class="search-container">
             <form action="#">
-                <a id="close-popup-success" class="close-icon"><i class="fa-solid fa-xmark"></i></a>
+                <button class="search-close-btn" id="searchCloseBtn"><i class="fa-solid fa-xmark"></i></button>
 
                 <label for="search">Search</label>
                 <div class="search-bar">
@@ -51,7 +51,7 @@
                 </div>
             </form>
         </div>
-        
+
         <section style="background-color: #1a1a1a;">
             <div class="hero">
                 <div class="hero-text">
