--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <body>
         <main>
-            <h1>Artist Alley - Find, Book & Celebrate</h1>
+            <h1>Artist Alley</h1>
         </main>
     </body>
 
