--- a/html/edit-account-artist.html
+++ b/html/edit-account-artist.html
@@ -71,7 +71,7 @@
             <input type="text" id="location" class="inputField">
 
             <label class="label" for="summary">Introduce yourself (max 120 words):</label>
-            <textarea type="text" id="summary" class="inputField" minlength="10" required> </textarea>
+            <textarea type="text" id="summary" class="inputTextArea" minlength="10" required> </textarea>
 
             <input type="file" id="portfolioImageInput" accept="image/*" multiple>
             <div id="portfolio-images">
