fix for $ sign issue in various places

--- a/html/account-artist.html
+++ b/html/account-artist.html
@@ -42,9 +42,9 @@
                     </div>
 
                     <ul>
-                        <li>Priving starts at: <span id="pricing">$ 125</span></li>
-                        <li>Pick me for: <span id="category">Rock and Jazz</span></li>
-                        <li>Location: <span id="address">Richmond, BC</span></li>
+                        <li>Priving starts at: <span id="pricing"></span></li>
+                        <li>Pick me for: <span id="category"></span></li>
+                        <li>Location: <span id="address"></span></li>
                     </ul>
 
                 </div>
