--- a/html/account-organiser.html
+++ b/html/account-organiser.html
@@ -89,7 +89,7 @@
                                     sound.</p>
                             </div>
                             <ul>
-                                <li>Priving starts at: <span>$ 125</span></li>
+                                <li>Pricing starts at: <span>$ 125</span></li>
                                 <li>Pick me for: <span>Rock and Jazz</span></li>
                                 <li>Location: <span>Vancouvver, BC</span></li>
                             </ul>
@@ -120,7 +120,7 @@
                                     sound.</p>
                             </div>
                             <ul>
-                                <li>Priving starts at: <span>$ 125</span></li>
+                                <li>Pricing starts at: <span>$ 125</span></li>
                                 <li>Pick me for: <span>Rock and Jazz</span></li>
                                 <li>Location: <span>Vancouvver, BC</span></li>
                             </ul>
@@ -151,7 +151,7 @@
                                     sound.</p>
                             </div>
                             <ul>
-                                <li>Priving starts at: <span>$ 125</span></li>
+                                <li>Pricing starts at: <span>$ 125</span></li>
                                 <li>Pick me for: <span>Rock and Jazz</span></li>
                                 <li>Location: <span>Vancouvver, BC</span></li>
                             </ul>
