--- a/html/artist-portfolio.html
+++ b/html/artist-portfolio.html
@@ -32,7 +32,7 @@
                     <label class="label" for="date">Event Date: </label>
                     <input type="date" id="date" class="inputField" required>
                     <label class="label" for="offer">Offer</label>
-                    <input type="text" id="offer" class="inputField" required>
+                    <input type="text" id="offer" class="inputField" required value="$">
 
                     <input id="makeOfferBtn" type="submit" value="Send">
                 </div>
@@ -73,9 +73,9 @@
                     </div>
 
                     <ul>
-                        <li>Pricing starts at: <span id="pricing">$ 125</span></li>
-                        <li>Pick me for: <span id="category">Guitarist</span></li>
-                        <li>Location: <span id="address">Vancouvver, BC</span></li>
+                        <li>Pricing starts at: <span id="pricing"></span></li>
+                        <li>Pick me for: <span id="category"></span></li>
+                        <li>Location: <span id="address"></span></li>
                     </ul>
 
                 </div>
