--- a/html/edit-account-artist.html
+++ b/html/edit-account-artist.html
@@ -62,7 +62,7 @@
             </select>
 
             <label class="label" for="pricing">Price starts at (hourly):  </label>
-            <input type="text" id="pricing" class="inputField">
+            <input type="text" id="pricing" class="inputField" value="$">
 
             <label class="label" for="website">Website/Portfolio:</label>
             <input type="text" id="website" class="inputField">
